--- a/europe/europe.html
+++ b/europe/europe.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Africa</title>
+    <title>Europe</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -76,7 +76,6 @@
                 document.getElementById(regionId).style.display = 'none';
             }
         </script>
-        </section>
         <section class="ecology">
             <h2>Ecology</h2>
 
@@ -359,6 +358,26 @@
             </form>
         </div>
     </main>
+    <footer>
+        <div class = "authors">
+            <p>Authors:</p>
+            <ul>
+                <li><a href="mailto:austinmedina@arizona.edu">Austin Medina</a></li>
+                <li><a href="mailto:mgcarlson@arizona.edu">Maddie Carlson</a></li>
+                <li><a href="mailto:ehysaj@arizona.edu">Enka Hysaj</a></li>
+                <li><a href="mailto:laureng5@arizona.edu">Lauren Goodrich</a></li>
+            </ul>
+        </div>
+        <div class="sources">
+            <p>Sources:</p>
+            <ul>
+                <li><a href="https://education.nationalgeographic.org/resource/Continent/" target="_blank">Geographic Information</a></li>
+                <li><a href="https://www.geographyrealm.com/continents/" target="_blank">Size and Population</a></li>
+                <li><a href="https://www.sciencedirect.com/topics/social-sciences/african-culture" target="_blank">Culture in Africa</a></li>
+                <li><a href="https://www.thesouthamericaspecialists.com/node/471" target="_blank">Culture in South America</a></li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="europe.js"></script>
     <script src="../home.js"></script>
