--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
        
-    <main style="background-image: url('earth.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <main id="homePage">
         <div class="welcome" style="background-color: #2c3e50;">
             <img src="logo.png" alt="Continental Breakfast Logo" class="logo">
             <h1>Continental Breakfast</h1>
@@ -92,27 +92,26 @@
             </div>
         </div>  
     </main>
-
+    <footer>
+        <div class = "authors">
+            <p>Authors:</p>
+            <ul>
+                <li><a href="mailto:austinmedina@arizona.edu">Austin Medina</a></li>
+                <li><a href="mailto:mgcarlson@arizona.edu">Maddie Carlson</a></li>
+                <li><a href="mailto:ehysaj@arizona.edu">Enka Hysaj</a></li>
+                <li><a href="mailto:laureng5@arizona.edu">Lauren Goodrich</a></li>
+            </ul>
+        </div>
+        <div class="sources">
+            <p>Sources:</p>
+            <ul>
+                <li><a href="https://education.nationalgeographic.org/resource/Continent/" target="_blank">Geographic Information</a></li>
+                <li><a href="https://www.geographyrealm.com/continents/" target="_blank">Size and Population</a></li>
+                <li><a href="https://www.sciencedirect.com/topics/social-sciences/african-culture" target="_blank">Culture in Africa</a></li>
+                <li><a href="https://www.thesouthamericaspecialists.com/node/471" target="_blank">Culture in South America</a></li>
+            </ul>
+        </div>
+    </footer>
     <script src="home.js"></script>
 </body>
-<footer>
-    <div class = "authors">
-        <p>Authors:</p>
-        <ul>
-            <li><a href="mailto:austinmedina@arizona.edu">Austin Medina</a></li>
-            <li><a href="mailto:mgcarlson@arizona.edu">Maddie Carlson</a></li>
-            <li><a href="mailto:ehysaj@arizona.edu">Enka Hysaj</a></li>
-            <li><a href="mailto:laureng5@arizona.edu">Lauren Goodrich</a></li>
-        </ul>
-    </div>
-    <div class="sources">
-        <p>Sources:</p>
-        <ul>
-            <li><a href="https://education.nationalgeographic.org/resource/Continent/" target="_blank">Geographic Information</a></li>
-            <li><a href="https://www.geographyrealm.com/continents/" target="_blank">Size and Population</a></li>
-            <li><a href="https://www.sciencedirect.com/topics/social-sciences/african-culture" target="_blank">Culture in Africa</a></li>
-            <li><a href="https://www.thesouthamericaspecialists.com/node/471" target="_blank">Culture in South America</a></li>
-        </ul>
-    </div>
-</footer>
 </html>
